--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <title>GIFlr</title>
-  <script type="text/javascript" src="node_modules/angular/angular.js"></script>
-  <script type="text/javascript" src="node_modules/angular-route/angular-route.js"></script>
+  <script type="text/javascript" src="/angular.js"></script>
+  <script type="text/javascript" src="/angular-route.js"></script>
 
 
-  <script src="node_modules/firebase/lib/firebase-web.js"></script>
-  <script src="node_modules/angularfire/dist/angularfire.min.js"></script>
+  <script src="/firebase-web.js"></script>
+  <script src="/angularfire.min.js"></script>
 
 
   <script type="text/javascript" src="cfapp.js"></script>
