--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html>
 <head>
   <title>GIFlr</title>
-  <script type="text/javascript" src="/angular.js"></script>
-  <script type="text/javascript" src="/angular-route.js"></script>
+  <script type="text/javascript" src="angular.min.js"></script>
+  <script type="text/javascript" src="angular-route.min.js"></script>
 
 
-  <script src="/firebase-web.js"></script>
-  <script src="/angularfire.min.js"></script>
+  <script src="https://cdn.firebase.com/js/client/2.0.6/firebase.js"></script>
+  <script src="angularfire.min.js"></script>
 
 
   <script type="text/javascript" src="cfapp.js"></script>
